# Relatiq-AI

./: .env.example  README.md  debug_node.py  import.ipynb  knowledge_graph.html  knowledge_graph.ipynb  main.py  pyproject.toml  requirements.txt  research.ipynb
KnowledgeGraph/: chunking.py  research.ipynb
data/: news2.txt  news3.txt  news4.txt  news7.txt  news8.txt
data/batch1/: news1.txt  news10.txt  news5.txt  news6.txt  news9.txt
data/batch2/: b2n1.txt  b2n2.txt  b2n3.txt  b2n4.txt
data/batch3/: b3n1.txt  b3n10.txt  b3n2.txt  b3n3.txt  b3n4.txt  b3n5.txt  b3n6.txt  b3n7.txt  b3n8.txt  b3n9.txt
frontend/: lint_output.txt  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: GraphVisualization.tsx
frontend/src/lib/: api.ts
research/: neo4j_ingestion.ipynb
src/: app.py  config.py  graph_db.py  ingest.py  prompt.py  streamlit_app.py
src/api/: main.py  routes.py
tests/: debug_analysis.py  debug_node.py  test_api_filters.py  test_article_filters.py  test_ingest.py
