[project]
name = "mind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.47.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "pydantic>=2.12.3",
]


