[project]
name = "mind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.47.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-google-genai>=3.0.0",
    "neo4j>=6.0.3",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
    "streamlit-agraph>=0.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

